--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "sanity": "sanity"
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -19,14 +18,12 @@
     "framer-motion": "^10.16.1",
     "geist": "^1.1.0",
     "next": "13.4.15",
-    "next-sanity": "^5.5.10",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "18.2.0",
     "react-type-animation": "^3.1.0",
     "resend": "^1.0.0",
-    "sanity": "^3.20.0",
     "styled-components": "^6.1.1",
     "tailwindcss": "3.3.3"
   },
