--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "18.2.0",
+    "react-floating-whatsapp": "^5.0.8",
     "react-type-animation": "^3.1.0",
     "resend": "^1.0.0",
     "styled-components": "^6.1.1",
